Expanding on slides

--- a/index.qmd
+++ b/index.qmd
@@ -54,43 +54,221 @@ the traditional and pervasive word processor and spreadsheets and that it was no
 that it was easier to work in a reproducible and open manner which engendered a passion for Open Research that persists
 today.
 
+One of the things I was asked to do about a year ago was look into
 Now that I've explained very briefly how I came to be interested in Open Research I'm going to tell you a bit about how
 I accidentally started the Open Scholarship Community Sheffield.
 :::
 
-## Communities
+## Open Scholarship Community Sheffield
+
+![[osc-international.com/osc-sheffield](osc-international.com/osc-sheffield)](img/OSC_Sheffield.png)
+
 
 
 ::: {.notes}
-Speaker Notes can be added to each slide. **Formatting** can be used here too.
+So I've had a long standing interest in open and reproducible research and have taken this extrapolated path to become a
+Research Software Engineer. The Research Software Engineering team and associated groups in the University such as IT
+Research Services and the Library have a small community, we interact regularly on various aspects of service provision
+and there is a Slack channel. About a year ago I was tasked with growing the RSE community to improve engagement and members who interacted across the University.
 :::
 
 ## OSC Incubator Programme
 
 
+![[OSC Incubator Program](https://osc-international.com/start-your-own-osc/)](img/inosc.png){width=50%}
+
 :::: {.columns}
-
-::: {.column width="50%"}
-**ToDo** (code)
-
-```markdown
-+ Learn Markdown
-+ Create Quarto Slides
-+ Publish on GitHub
-```
-
+::: {.column width=50%}
+1. Mission and Vision
+2. Member Recruitment
+3. Community Engagement
 :::
-
 ::: {.column width="50%"}
-**ToDo** (Rendered)
-
-+ Learn Markdown
-+ Create Quarto Slides
-+ Publish on GitHub
-
+4. Stakeholder Engagement
+5. Monitoring and Sustainability
+6. Open Session and Final Presentation
 :::
 ::::
 
 ::: {.notes}
-Slides can have columns and we can create unordered lists.
+I was browsing through media feeds as I do and I came across the OSC Incubator Programme which was running in early
+March 2022 and thought this would be a useful way of finding out some ways to help grow the RSE community at The
+University of Sheffield.
+
+I can be a bit slow at times and didn't think too much about the key word in the title "Incubator" but signed up.
+
+On the first week the penny dropped and I realised that I would be establishing a Open Science Community, which is where
+the "accidental" part of this short presentation comes from.
+
+So what did I let myself in for? Well thankfully its a really well structured course!
+
+The International Open Science and Scholarship Community was established at University of Utrecht and has grown within the Netherlands with 12 local communities at different Universities throughout the Netherlands.
+
+The Incubator Programme aims to help grow the OSC community beyond The Netherlands, and the Incubator Programme runs
+over 14 weeks programme and takes people through setting up a local OSC Community.
+
+This involves setting a Mission and Vision, how to go about Community Engagement and Recruiting Members, engaging with
+Stakeholders, monitoring activity, progress and sustainability.
+
+I'm not going to cover all of these areas but will state the mission and vision, member recruitment and community engagement.
+:::
+
+
+## Why Communities
+
+![[Improving the Research Culture: COS Celebrates 10 Years](https://www.cos.io/blog/cos-celebrates-10-years)](img/COS_Culture_and_Behavior_Change_model2.png){width=75%}
+
+::: aside
+[Nosek (2019) Strategy for Culture Change](https://www.cos.io/blog/strategy-for-culture-change)
+:::
+
+:::{.notes}
+Being somewhat naive about the role communities play it was useful to be taught how they fit in to effecting culture
+change and I find this graphic explains things well.
+
+Infrastructure is at the base of the pyramid of culture and behaviour change, you need tools such as the
+Open Science Framework which allows researchers to register their studies, share materials, data and output at any point
+to accelerate communication regardless of publication status.
+
+But for this to be effective the user experience needs to be low friction to encourage adoption and many
+popular services integrate with each other and strive to make their tools accessible.
+
+From the top of the pyramid is policy, which derives from funders and institutions, and defines what you have to do
+within the system to gain recognition.
+
+This in turn defines the incentives that reward participants for participating in the system.
+
+Whilst individuals can always go about changing their own behaviour, this can be challenging when the culture is
+to maintain the status quo, not all colleagues are keen to change their working practices. But an effective way of
+supporting and nurturing individuals who are seeking to change is via a supportive community as seeing others
+using open research practices normalises the behavioural changes, provides support and demonstrates that open research is
+possible.
+
+Thus communities normalise behaviour and serve to accelerate the adoption of change, in this case Open Research
+practices, and importantly can feed up the pyramid to the top to influence and shape policy as practices and guidelines
+develop and mature over time.
+:::
+
+## Vision
+
+> To be an inclusive, supportive, and active community for researchers to interact, share knowledge and encourage good
+> working practices such that the values, transparency and culture of Open Scholarship becomes the norm.
+
+:::{.notes}
+The Vision of OSC Sheffield states what we wish to be currently stands as.
+:::
+
+## Mission
+
+> We aim to develop and share knowledge and good Open Scholarship practices that foster, enable, encourage and support
+> Open Scholarship to be undertaken by anyone at the University of Sheffield wishing to do so.
+>
+> We encourage community interactions where those with experience meet with those wishing to learn to share, support,
+> mentor and encourage good Open Scholarship practices. This will encourage collaboration between individuals, groups,
+> institutions and organisations seeking to improve transparency and openness in scientific research.
+
+:::{.notes}
+The Mission sets out in broad terms how we will go about achieving the vision and currently reads as...
+
+The Incubator Programme guided me through the different steps in identifying who the stakeholders would be both
+internally such as the Library, Open Research Working Group, Open Research Advisory Group, Heads of Faculties as well as
+ externally such as the UK Research Network.
+
+The aim is to have a broad membership not just from University of Sheffield but also Sheffield Hallam and beyond with
+regular events for people to attend, learn about and share their experience of Open Research.
+:::
+
+## Member Recruitment
+
+:::: {.columns}
+::: {.column width=50%}
++ Open Research Working Group (ORWG)
++ ORWG members canvassed for faculty leaders
+:::
+::: {.column width="50%"}
++ Launched at [OpenFest2023](https://ns-rse.github.io/openfest2023-oscsheffield/)
++ [32 members](https://osc-international.com/osc-sheffield-members/?filter_osc_36e45=OSC%20Sheffield)
+:::
+::::
+
+:::{.notes}
+I've been quite fortunate in getting things going because the University of Sheffield already has structures in place
+from the top down setting out the policy on Open Research and there is good infrastructure in place to support that.
+
+Bridging that gap in the pyramid of behaviour change is Jenni Adams and the Open Research Working Group as well as many
+other support staff who are actively engaged in undertaking and promoting Open Research here at the University and
+Jenni has been very supportive getting OSC Sheffield up and running and already organises a number of events.
+:::
+
+## Community Engagement - Existing Activities
+
+:::: {.columns}
+::: {.column width=50%}
++ Open Research Conversation.
++ RSE Lunchbytes.
++ OpenFest
++ FAIR Faculty Seminars
++ How to Share Survey Data
+:::
+::: {.column width="50%"}
++ Unleash your Data
++ ORWG Drop In-Sessions
+:::
+::::
+
+:::{.notes}
+Various events are already organised that help bring people together to talk about and share ideas around Open Research
+practices.
+
+There are the Open Research Conversation
+:::
+
+## Community Engagement - OSC Sheffield
+
+:::: {.columns}
+::: {.column width=50%}
+![[**sheffieldr.github.io**](https://sheffieldr.github.io)](img/SheffieldR_hex.png){width=30%}
+
+{{< qrcode https://sheffieldr.github.io qr_sheffieldr width=250 height=250 >}}
+
+:::
+::: {.column width="50%"}
+
+![[**reproducibilitea-sheffield.github.io**](https://reproducibilitea-sheffield.github.io/)](img/reproducibiliTea_logo.jpg){widh=120%}
+
+{{< qrcode https://reproducibilitea-sheffield.github.io/ qr_reproducibilitea width=250 height=250 >}}
+
+:::
+::::
+
+:::{.notes}
+With the support of my colleague Grace Accad from IT Services we have re-launched the Sheffield R User group and had two
+meetings, one in October and one in November. These are events where people present their work with using the
+[R](https://www.r-project.org/) statistical programming language.
+
+With Jim Uttley and Zuzanna Zagrodzka's support we are also re-launching the
+[ReproducibiliTea](https://reproducibilitea.org/) Journal Club which aims to discuss diverse issues, papers and ideas
+about improving science, reproducibility and the Open Science movement and the first of those is scheduled for next week
+following the next Open Research Conversation. We'll be meeting in the Diamond and if you follow the links you can find
+out more about paper that will be presented.
+:::
+
+
+## Community Engagement - OSC Sheffield
+
+:::: {.columns}
+::: {.column width=50%}
++ Join and add your profile!
++ [osc-international.com/osc-sheffield](https://osc-international.com/osc-sheffield/)
+
+{{< qrcode https://osc-international.com/osc-sheffield/ qr_oscsheffield width=250 height=250 >}}
+
+:::
+::: {.column width="50%"}
+![OSC Members](img/osc_sheffield_profiles3.png)
+:::
+::::
+
+:::{.notes}
+
 :::
